# actix-web-demo

./: .gitignore  Cargo.toml
migrations/2020-08-27-105924_create_persons/: up.sql
src/: actions.rs  main.rs  models.rs  schema.rs
